fix, feat: ⑤ + text overflow ellipses
プロセスページのサムネイルもホバー時にはブルーになる方がよいです。

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -28,3 +28,12 @@
     @content;
   }
 }
+
+/**
+ * Media query
+ */
+@mixin ellipses {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
